@@ -2,11 +2,9 @@ CC=gcc
 
 CFLAGS=-Wall -DSLIMPROTO_DEBUG -DUSE_SIGNALS_FOR_RESTART -DPORTAUDIO_ALSA -g -march=i686
 
-INCLUDE=-Ilib/libportaudio/linux26/include -Ilib/portmixer/px_common -Ilib/getopt -Isrc
+INCLUDE=-Ilib/libportaudio/linux26/include -Ilib/portmixer/px_common -Isrc
 
-PORTMIXERFILES:=lib/portmixer/px_none/px_none.c
-
-GETOPTFILES=lib/getopt/getopt.c lib/getopt/getopt1.c
+PORTMIXERFILES:=lib/portmixer/px_unix_oss/px_unix_oss.c
 
 SLIMPROTOFILES:=src/slimaudio/slimaudio_http.c src/slimaudio/slimaudio_decoder.c src/slimaudio/slimaudio_decoder_flac.c src/slimaudio/slimaudio_decoder_mad.c src/slimaudio/slimaudio_decoder_vorbis.c src/slimaudio/slimaudio_decoder_pcm.c src/slimaudio/slimaudio_output.c src/slimaudio/slimaudio_buffer.c src/slimaudio/slimaudio.c src/slimproto/slimproto.c
 
@@ -15,29 +13,23 @@ SQUEEZESLAVEFILES:=src/squeezeslave/squeezeslave.c
 .c.o:
 	${CC} $(CFLAGS) -c $(INCLUDE) $< -o $*.o
 
-all : bin/squeezeslave
+all : bin/squeezeslave-alsa
 
 lib/libslimproto.a: $(SLIMPROTOFILES:.c=.o)
 	ar cru lib/libslimproto.a $^
 	ranlib lib/libslimproto.a
 
-lib/libgetopt.a: $(GETOPTFILES:.c=.o)
-	ar cru lib/libgetopt.a $^
-	ranlib lib/libgetopt.a
-
-bin/squeezeslave : $(SQUEEZESLAVEFILES:.c=.o) $(PORTMIXERFILES:.c=.o) lib/libslimproto.a lib/libgetopt.a
-	${CC} -g -o bin/squeezeslave $^ lib/libportaudio/linux26/lib/libportaudio.a /usr/lib/libmad.a /usr/lib/libFLAC.a /usr/lib/libvorbisfile.a /usr/lib/libvorbis.a /usr/lib/libogg.a -lasound -lrt -lpthread -lm
+bin/squeezeslave-alsa : $(SQUEEZESLAVEFILES:.c=.o) $(PORTMIXERFILES:.c=.o) lib/libslimproto.a
+	${CC} -g -o bin/squeezeslave-alsa $^ lib/libportaudio/linux26/lib/libportaudio.a /usr/lib/libmad.a /usr/lib/libFLAC.a /usr/lib/libvorbisfile.a /usr/lib/libvorbis.a /usr/lib/libogg.a -lasound -lrt -lpthread -lm
 
 clean:
 	@{ for FILE in $(PORTAUDIOFILES:.c=.o) \
 	               $(SLIMPROTOFILES:.c=.o) \
 	               $(PORTMIXERFILES:.c=.o) \
 	               $(SQUEEZESLAVEFILES:.c=.o) \
-	               $(GETOPTFILES:.c=.o) \
 	               lib/libportaudio.a \
 	               lib/libslimproto.a \
-	               lib/libgetopt.a \
-	               bin/squeezeslave; do \
+	               bin/squeezeslave-alsa; do \
 	  test -e $$FILE && echo $$FILE || true; \
 	  test -e $$FILE && $(RM) $$FILE 2>/dev/null || true; \
 	done; } | xargs --no-run-if-empty echo $(RM)
