@@ -39,12 +39,11 @@
 #define DECODER_BUFFER_SIZE 1048576
 #define OUTPUT_BUFFER_SIZE 10*2*44100*4
 #else
-#define DECODER_BUFFER_SIZE  2097152 /* was 1572864 */
-#define OUTPUT_BUFFER_SIZE 14*2*44100*4
+#define DECODER_BUFFER_SIZE  1572864
+#define OUTPUT_BUFFER_SIZE 16*2*44100*4
 #endif
 
 #define AUDIO_CHUNK_SIZE 8192
-
 
 typedef enum { STREAM_QUIT=0, STREAM_STOP, STREAM_STOPPED, STREAM_PLAYING } slimaudio_stream_state_t;
 
